# ntscpp

./: .clangd  .gitignore  CMakeLists.txt  README.md  notes.md  runme.sh
include/: dsp_utils.h  ntsc_codec.h  ntsc_common.h
src/: dsp_utils.cpp  dsp_utils.h  main.cpp  ntsc_codec.cpp  ntsc_common.h  ntsc_decoder.cpp  ntsc_encoder.cpp
